adding link to index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p>Application page deployed via github pages to:</p>
 
-<p><a href="https://eviltester.github.io/synchole/">https://eviltester.github.io/synchole/</a></p>
+<p><a href="https://eviltester.github.io/synchole/index.html">https://eviltester.github.io/synchole/</a></p>
 
 
 <p>Author:  Alan Richardson <a href="https://eviltester.com">EvilTester.com</a></p>
