added links to course

--- a/about.html
+++ b/about.html
@@ -20,5 +20,6 @@
 is probably just a simulation, loading in a JSON file, or just a delay on the front end.
 This was to allow the pages to be hosted on any static site delivery platform.</p>
 <p><a href="https://eviltester.com">SyncHole was created by Alan Richardson.</a></p>
+<p>The SyncHole is used in the online training course "<a href="https://www.linkedin.com/learning/advanced-selenium-3-synchronization-strategies">Advanced Selenium: Synchronization Strategies</a>" available on LinkedIn Learning.</p>
 </body>
 </html>
