--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <p><a href="https://eviltester.github.io/synchole/index.html">https://eviltester.github.io/synchole/</a></p>
 
+<p>The SyncHole is used in the online training course "<a href="https://www.linkedin.com/learning/advanced-selenium-3-synchronization-strategies">Advanced Selenium: Synchronization Strategies</a>" available on LinkedIn Learning.</p>
 
 <p>Author:  Alan Richardson <a href="https://eviltester.com">EvilTester.com</a></p>
 </body>
